--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Rize2Day"
-    />
+    <meta name="description" content="Rize2Day" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,6 +25,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Rize2Day</title>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-43MFMGR1JX%22%3E"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-43MFMGR1JX");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
