--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,10 @@
 
       gtag("config", "G-43MFMGR1JX");
     </script>
+    <script
+      type="module"
+      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
